2006-03-23  Brian Cameron  <brian.cameron@sun.com>

        * docs/C/gdm.xml: Update Accessibility and Solaris sections
	  of the manual.  The Accessibility section was badly out of
	  date, and some new information needed to be added (like
	  that you don't need to create a writable gdm home directory
	  starting with GNOME 2.18).
	* daemon/gdm.c, daemon/verify-pam.c, daemon/misc.c:  Use
	  "#ifdef __sun" instead of "#ifdef sun".

2006-03-23  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Add new XnestUnscaledFontPath key to docs.
	  Fix Configuration section to refer to the configuration
	  file by name rather than repeating the full path over and
	  over.  Now that we support Xephyr, change docs to refer
	  to "nested Xserver" or "nested display" rathar than
	  referring to this feature as "Xnest".  Added some docs
 	  to the PAM section.  Other cleanup of wording.
	* daemon/gdm.[ch], daemon/auth.c, daemon/server.c,
	  daemon/slave.c: Change wording fro Xnest to "nested
	  Xserver" or "nested display".

2006-03-21  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c:  Remove the logic to call whack_clients
	  when closing the session.  This code was written to address
	  bug 126071, to ensure that all clients are killed on session
	  exit.  However, this approach doesn't work well and causes
	  GDM to fail badly when you kill the Xserver via
	  control-alt-backspace on some environements.  It would be
	  better to kill all clients by looping through the 
	  slave daemons process tree and killing them rather than
	  using XKillClient, which only kills client programs that
	  are attached to the Xserver.  This fixes bug #419301.
	  Patch provided by Cesare Tirabassi <norsetto@alice.it>.

2006-03-21  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmphotosetup.desktop.in: Change Category to 
	  GNOME;GTK;Settings.  Fixes bug #417350.

2007-03-21  William Jon McCann  <mccann@jhu.edu>

	* common/Makefile.am: