@@ -1,5 +1,10 @@
 2006-03-23  Brian Cameron  <brian.cameron@sun.com>
 
+        * docs/C/gdm.xml: A little more information added to Solaris
+	  and Accessibility sections.
+
+2006-03-23  Brian Cameron  <brian.cameron@sun.com>
+
         * docs/C/gdm.xml: Update Accessibility and Solaris sections
 	  of the manual.  The Accessibility section was badly out of
 	  date, and some new information needed to be added (like
